<resources>
    <string name="app_name">SpaceApp</string>
    <string name="map">Map</string>
    <string name="main">Main</string>
    <string name="show_image">Show image</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_error">Connection error</string>
    <string name="click_the_button_to_go_back">Click the button to go back</string>
    <string name="click_the_button_to_share">Click the button to share</string>
    <string name="use_gestures_to_zoom_in_out">Use gestures to zoom in/out</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="longitude">Longitude:</string>
    <string name="width">Width:</string>
    <string name="marker_name">Marker name</string>
    <string name="cansel">Cansel</string>
    <string name="save">Save</string>
    <string name="no_name">No name</string>
</resources>