<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_alert">

    <EditText
        android:id="@+id/editMarkerName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/roboto"
        android:hint="@string/marker_name"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/pink"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cansel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cansel"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/editMarkerName" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMarkerName" />


</androidx.constraintlayout.widget.ConstraintLayout>